hphp/test/slow/array/fpassm_mw.php.expectf
Fatal error: Can't use [] for reading in %s/test/slow/array/fpassm_mw.php on line 8
